v0.4.1/_sources/gallery/symbols/custom_symbols.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/symbols/custom_symbols.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_symbols_custom_symbols.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_symbols_custom_symbols.py:


Custom symbols
--------------

The :meth:`pygmt.Figure.plot` method can plot individual custom symbols
by passing the corresponding symbol name together with the **k** shortcut to
the ``style`` parameter. In total 41 custom symbols are already included of
which the following plot shows five exemplary ones. The symbols are shown
underneath their corresponding names. For the remaining symbols see the GMT
cookbook :gmt-docs:`cookbook/custom-symbols.html`.

.. GENERATED FROM PYTHON SOURCE LINES 12-48



.. image:: /gallery/symbols/images/sphx_glr_custom_symbols_001.png
    :alt: custom symbols
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default


    import pygmt

    fig = pygmt.Figure()
    fig.basemap(region=[0, 8, 0, 3], projection="X12c/4c", frame=True)

    # define pen and fontstlye for annotations
    pen = "1p,black"
    font = "15p,Helvetica-Bold"

    # use the volcano symbol with a size of 1.5c,
    # fill color is set to "seagreen"
    fig.plot(x=1, y=1.25, style="kvolcano/1.5c", pen=pen, color="seagreen")
    fig.text(x=1, y=2.5, text="volcano", font=font)

    # use the astroid symbol with a size of 1.5c,
    # fill color is set to "red3"
    fig.plot(x=2.5, y=1.25, style="kastroid/1.5c", pen=pen, color="red3")
    fig.text(x=2.5, y=2.5, text="astroid", font=font)

    # use the flash symbol with a size of 1.5c,
    # fill color is set to "darkorange"
    fig.plot(x=4, y=1.25, style="kflash/1.5c", pen=pen, color="darkorange")
    fig.text(x=4, y=2.5, text="flash", font=font)

    # use the star4 symbol with a size of 1.5c,
    # fill color is set to "dodgerblue4"
    fig.plot(x=5.5, y=1.25, style="kstar4/1.5c", pen=pen, color="dodgerblue4")
    fig.text(x=5.5, y=2.5, text="star4", font=font)

    # use the hurricane symbol with a size of 1.5c,
    # fill color is set to "magenta4"
    fig.plot(x=7, y=1.25, style="khurricane/1.5c", pen=pen, color="magenta4")
    fig.text(x=7, y=2.5, text="hurricane", font=font)

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.933 seconds)


.. _sphx_glr_download_gallery_symbols_custom_symbols.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: custom_symbols.py <custom_symbols.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: custom_symbols.ipynb <custom_symbols.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
